--- a/content/1.introduction/4.configuration.md
+++ b/content/1.introduction/4.configuration.md
@@ -42,9 +42,9 @@ export default defineAppConfig({
     },
     footer: {
       credits: {
-        icon: 'IconDocus',
-        text: 'Powered by Docus',
-        href: 'https://docus.dev',
+        // icon: 'IconDocus',
+        text: 'Powered by Doc',
+        // href: 'https://docus.dev',
       },
       textLinks: [
         {
@@ -54,18 +54,18 @@ export default defineAppConfig({
           rel: 'noopener'
         }
       ],
-      iconLinks: [
-        {
-          label: 'NuxtJS',
-          href: 'https://nuxtjs.org',
-          component: 'IconNuxtLabs',
-        },
-        {
-          label: 'Vue Telescope',
-          href: 'https://vuetelescope.com',
-          component: 'IconVueTelescope',
-        },
-      ],
+      // iconLinks: [
+      //   {
+      //     label: 'NuxtJS',
+      //     href: 'https://nuxtjs.org',
+      //     component: 'IconNuxtLabs',
+      //   },
+      //   {
+      //     label: 'Vue Telescope',
+      //     href: 'https://vuetelescope.com',
+      //     component: 'IconVueTelescope',
+      //   },
+      // ],
     }
   }
 })
